[metadata]
name = reactonite
version = attr: reactonite.__version__
description = Transpile HTML to React
long_description = file: README.md
long_description_content_type = text/markdown
author = Reactonite

[flake8]
exclude = .git,.venv,.env,venv,env,__pycache__,docs/source/conf.py,build,dist

[options.entry_points]
console_scripts =
    reactonite=reactonite.main:cli
